--- a/.github/workflows/ios-ci.yaml
+++ b/.github/workflows/ios-ci.yaml
@@ -16,8 +16,11 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Set up Xcode
-        run: sudo xcode-select -switch /Applications/Xcode.app
+      - name: List available Xcode versions
+        run: ls /Applications | grep Xcode
+
+      - name: Set up Xcode 15.2
+        run: sudo xcode-select -switch /Applications/Xcode_15.2.app
 
       - name: Build and test
         run: |
